--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest --setupFilesAfterEnv ./jest.setup.js"
   },
   "dependencies": {
+    "@elasticemail/elasticemail-client": "^4.0.23",
     "bcrypt": "^5.1.0",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
@@ -24,7 +25,8 @@
     "mongoose-unique-validator": "^4.0.0",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nanoid": "^3.3.4"
+    "nanoid": "^3.3.4",
+    "nodemailer": "^6.9.4"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^4.1.7",
